# Competitive-Programming

./: .gitignore  Cardgame.cpp  Counting substhreengs.cpp  Fenced In.cpp  Fortmoo.cpp  Galaxy Collision.cpp  Haybales.cpp  Join Two Kingdoms.cpp  Max Flow.cpp  Query on a tree.cpp  README.md  competitive_programming.opam  dune  dune-project  main.ml  plantilla.cpp  run.sh
ACM-ICPC Live Archive/: Disjoint Paths.cpp  Go Up the Ultras.cpp  Knights of the Round Table.cpp  Low Power.cpp  Surveillance.cpp
BOI/: Ballmachine.cpp
COJ/: 2505_the_king_of_the_north.cpp
CSAcademy/: xor_submatrix.cpp
Codeforces/: 1861B_two_binary_strings.cpp  1868A_fill_in_the_matrix.cpp  1918A_brick_wall.cpp  1918B_minimize_inversions.cpp  1918C_xor_distance.cpp  1918D_blocking_elements.cpp  1929C_sasha_and_the_casino.cpp  1948A_special_characters.cpp  1948B_array_fix.cpp  1948C_arrow_path.cpp  1948D_tandem_repeats.cpp  1989A_catch_the_coin.cpp  1989B_substring_and_sequence.cpp  1989C_two_movies.cpp  1989D_smithing_skill.cpp  1989E_distance_to_different.cpp  1993A_question_marks.cpp  1994A_diverse_game.cpp  1994B_fun_game.cpp  1994C_hungry_games.cpp  1994D_funny_game.cpp  1994E_wooden_game.cpp  1997A_strong_password.cpp  1997B_make_three_regions.cpp  1997C_even_positions.cpp  1997D_maximize_the_root.cpp  2042A_greedy_monocarp.cpp  2042B_game_with_colored_marbles.cpp  2053A_tender_carpenter.cpp  2053B_outstanding_impressionist.cpp  2053C_bewitching_stargazer.cpp  2053D_refined_product_optimality.cpp  2053E_resourceful_caterpillar_sequence.cpp  2057A_mex_table.cpp  2057B_gorilla_and_the_exam.cpp  (+51 more)
(+235 files in other folders)
