(executable
 (name main)
 (public_name main)
 (promote (until-clean))
 (libraries codeforces adventofcode egoi_2025)
 (preprocess
  (pps ppx_jane)))

(rule
 (mode
  (promote (until-clean)))
 (action
  (with-stdin-from
   case.in
   (with-stdout-to
    case.out
    (run ./main.exe)))))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
